--- a/Code/Inventor.Core/Inventor.Core.csproj
+++ b/Code/Inventor.Core/Inventor.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Base\Explanation.cs" />
     <Compile Include="Base\Context classes.cs" />
     <Compile Include="Base\Question.cs" />
+    <Compile Include="Base\StatementQuestion.cs" />
     <Compile Include="Base\StatementRepository.cs" />
     <Compile Include="Context interfaces.cs" />
     <Compile Include="IAttribute.cs" />
